[metadata]
name = cex
version = attr: cex.__version__
description = Command-line tool to interact with Compiler Explorer
long_description = file: README.md
long_description_content_type = text/markdown
author = Gustavo Costa
author_email = xfgusta@gmail.com
url = https://github.com/xfgusta/cex
project_urls =
    Repository = https://github.com/xfgusta/cex
    Issues = https://github.com/xfgusta/cex/issues
license = MIT
plataform = any
keywords = cli, lib, library, api, command-line, compiler, compilation, compiler-explorer, godbolt
classifier = 
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    requests
    colorama

[options.entry_points]
console_scripts =
    cex = cex.__main__:main

[options.data_files]
share/man/man1 = man/cex.1
