[metadata]
name = cexpl
version = attr: cexpl.__version__
description = Command-line tool to interact with Compiler Explorer
long_description = file: README.md
long_description_content_type = text/markdown
author = Gustavo Costa
author_email = xfgusta@gmail.com
url = https://github.com/xfgusta/cexpl
project_urls =
    Repository = https://github.com/xfgusta/cexpl
    Issues = https://github.com/xfgusta/cexpl/issues
license = MIT
plataform = any
keywords = cli, lib, library, api, command-line, compiler, compilation, compiler-explorer, godbolt
classifier = 
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    requests
    colorama

[options.entry_points]
console_scripts =
    cexpl = cexpl.__main__:main

[options.data_files]
share/man/man1 = man/cexpl.1
